// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Task: dependency-install > do not run postInstall command if empty 1`] = `
"[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, prettier, typescript
[DATA] Setting resolutions: typescript@^5.0.4
[SUCCESS] Install dependencies
"
`;

exports[`Task: dependency-install > install custom dependencies 1`] = `
"[STARTED] Install dependencies
[DATA] Installing dependencies: fs-extra
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, prettier, typescript, tmp
[DATA] Setting resolutions: typescript@^5.0.4
[SUCCESS] Install dependencies
"
`;

exports[`Task: dependency-install > install required dependencies 1`] = `
"[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, prettier, typescript
[DATA] Setting resolutions: typescript@^5.0.4
[SUCCESS] Install dependencies
"
`;

exports[`Task: dependency-install > multiple postInstall commands from user config 1`] = `
"[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, prettier, typescript
[DATA] Run postInstall hook from config
[DATA] Setting resolutions: typescript@^5.0.4
[SUCCESS] Install dependencies
"
`;

exports[`Task: dependency-install > show failed deps 1`] = `
"We ran into an error when installing dependencies, please install the following as dependencies and try again.
  - this-is-not-existed
We ran into an error when installing devDependencies, please install the following as devDependencies and try again.
  - @types/node
  - @typescript-eslint/eslint-plugin
  - @typescript-eslint/parser
  - eslint
  - prettier
  - typescript
  - this-would-fail"
`;

exports[`Task: dependency-install > single postInstall command from user config 1`] = `
"[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, prettier, typescript, fs-extra
[DATA] Run postInstall hook from config
[DATA] Setting resolutions: typescript@^5.0.4
[SUCCESS] Install dependencies
"
`;

exports[`Task: dependency-install > skip install custom deps 1`] = `
"[STARTED] Install dependencies
[SKIPPED] Install dependencies
"
`;

exports[`Task: dependency-install > skip install required dependencies 1`] = `
"[STARTED] Install dependencies
[SKIPPED] Install dependencies
"
`;
